live-manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/tls-acme: "true"
      meta.helm.sh/release-name: console
      meta.helm.sh/release-namespace: console
      nginx.ingress.kubernetes.io/affinity: cookie
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/session-cookie-path: /socket
    creationTimestamp: "2023-02-07T14:09:05Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: console
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: console
      app.kubernetes.io/version: 0.3.25
      helm.sh/chart: console-0.7.42
    name: console
    namespace: console
    resourceVersion: "18959"
    uid: 1b9fc555-ca84-44aa-831c-645a0202dcd5
  spec:
    ingressClassName: nginx
    rules:
    - host: console.luegnix.yadayada.app
      http:
        paths:
        - backend:
            service:
              name: console
              port:
                name: http
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - console.luegnix.yadayada.app
      secretName: console-tls
  status:
    loadBalancer:
      ingress:
      - ip: 34.159.95.139
kind: List
metadata:
  resourceVersion: ""
